@@ -15,6 +15,7 @@ Major new features:
 
 The following bugs are resolved with this release:
 
+  [15271] dlfcn function failure after dlmopen terminates process
   [18435] pthread_once hangs when init routine throws an exception
   [23462] Static binary with dynamic string tokens ($LIB, $PLATFORM, $ORIGIN)
     crashes
